created activate user endpoint and added token response
